--- a/PA1_template.html
+++ b/PA1_template.html
@@ -66,8 +66,7 @@ img {
 
 <div id="loading-and-preprocessing-the-data" class="section level3">
 <h3><strong>Loading and preprocessing the data</strong></h3>
-<pre class="r"><code>setwd(&quot;/home/thodoris/Courses/DataScience/Reproducible_Research/week-2/project/RepData_PeerAssessment1/&quot;)
-df &lt;- read.csv(&quot;./activity.csv&quot;, header=TRUE, stringsAsFactors=TRUE)</code></pre>
+<pre class="r"><code>df &lt;- read.csv(&quot;./activity.csv&quot;, header=TRUE, stringsAsFactors=TRUE)</code></pre>
 </div>
 <div id="what-is-mean-total-number-of-steps-taken-per-day" class="section level3">
 <h3><strong>What is mean total number of steps taken per day?</strong></h3>
